diesel_compile_tests/tests/fail/derive/queryable_by_name_requires_table_name_or_sql_type_annotation.rs
#[macro_use]
extern crate diesel;

#[derive(QueryableByName)]
//~^ ERROR: all fields of tuple structs must be annotated with `#[diesel(column_name)]`
struct Bar(i32, String);

fn main() {}
